# FactorioStreet

./: .gitignore  Cargo.toml  README.md  errors.txt  output.txt
factorio_street/: Cargo.toml
factorio_street/src/: main.rs
server/: .env  auth.go  game.go  go.mod  go.sum  hub.go  main.go  migrate.sql  npc.go  schema.sql
src/: constants.rs  main.rs  network.rs  persistence.rs  render.rs  simulation.rs  sprites.rs  terrain.rs  types.rs
src/types/: crystal_forge.rs
