[package]
name = "factorio2"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
uuid = { version = "1", features = ["v4"] }
tungstenite = "0.24"
url = "2"
image = { version = "0.24", features = ["jpeg", "png"] }
